# vaultwarden-mcp

./: .env.example  .gitignore  Dockerfile  README.md  compose.yml  docker-compose.yml  pyproject.toml
src/vaultwarden_mcp/: __init__.py  config.py  server.py  vaultwarden.py
