[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "vaultwarden-mcp-server"
version = "0.1.0"
description = "MCP server for AI agents to retrieve secrets from Vaultwarden"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1,<1.0",
    "mcp>=1.27.1,<2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0,<9.0"]

[project.scripts]
vaultwarden-mcp-server = "vaultwarden_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vaultwarden_mcp"]
